examples/pos/namedhole.effekt
def foo() = <x>

def main() = {
  println(42)
}
