examples/neg/parsing/half-done-effect-type.effekt
def foo{ body: => Unit / }: Unit = {
  body()
}

def main() = ()